--- a/src/app/views/identity/recovery-password-change/recovery-password-change.component.html
+++ b/src/app/views/identity/recovery-password-change/recovery-password-change.component.html
@@ -1,4 +1,4 @@
-<aw-view-base [showFooter]="false" [showNavbar]="false" [showSidebar]="false">
+<aw-view-base [footerState]="false" [navbarState]="false" [sidebarState]="false">
   <div class="form-recovery-password-change w-100 m-auto mt-5">
     <aw-card extraCss="p-4">
       <form (ngSubmit)="handleSubmit()" [formGroup]="form">
