--- a/src/app/views/errors/error404/error404.component.html
+++ b/src/app/views/errors/error404/error404.component.html
@@ -1,4 +1,4 @@
-<aw-view-base [showNavbar]="false" [showSidebar]="false" [showFooter]="false">
+<aw-view-base [navbarState]="false" [sidebarState]="false" [footerState]="false">
   <div class="container-fluid">
     <div class="row align-items-center justify-content-center vh-100">
       <div class="col-lg-6 m-auto text-center shadow-sm">
