--- a/src/app/views/identity/register-validate/register-validate.component.html
+++ b/src/app/views/identity/register-validate/register-validate.component.html
@@ -1,4 +1,4 @@
-<aw-view-base [showFooter]="false" [showNavbar]="false" [showSidebar]="false" cssContent="container">
+<aw-view-base [footerState]="false" [navbarState]="false" [sidebarState]="false" cssContent="container">
   <div class="row">
     <div class="col-lg-6 m-auto">
       <!-- success-->
