--- a/src/app/views/identity/register/register.component.html
+++ b/src/app/views/identity/register/register.component.html
@@ -1,4 +1,4 @@
-<aw-view-base [showFooter]="false" [showNavbar]="false" [showSidebar]="false">
+<aw-view-base [footerState]="false" [navbarState]="false" [sidebarState]="false">
   <div class="form-register w-100 m-auto">
     <aw-card extraCss="p-4">
       <form (ngSubmit)="handleSubmit()" [formGroup]="form">
