Implementado nuevo sidebar

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,5 +1,5 @@
-<footer class="footer text-white bg-mode">
-  <div class="container">
+<footer class="footer bg-body-tertiary mt-5">
+  <div [ngClass]="cssContent">
     <p>footer works!</p>
   </div>
 </footer>
