--- a/src/app/components/sidebar/sidebar.component.scss
+++ b/src/app/components/sidebar/sidebar.component.scss
@@ -1,49 +1,289 @@
-@import "functions";
-@import "variables";
+// https://github.com/azouaoui-med/angular-pro-sidebar
+@import "variables-local";
+@import "variables-bs";
 
-#sidebar-wrapper {
-  min-height: 100vh;
-  margin-left: -15rem;
-  border-right: 0.5px solid $list-group-border-color;
-  -webkit-transition: margin 0.25s ease-out;
-  -moz-transition: margin 0.25s ease-out;
-  -o-transition: margin 0.25s ease-out;
-  transition: margin 0.25s ease-out;
+/*------------------------------default theme---------------------------------*/
+$bg-sidebar-wrapper: $dark;
+$border-color: #2b2b2b;
+$header-menu-color: #6c7b88;
+$hover-color: #ffffff;
 
-  .sidebar-heading {
-    padding: 0.875rem 1.25rem;
-    font-size: 1.2rem;
+@keyframes swing {
+  0% {
+    transform: rotate(0deg);
   }
 
-  .list-group {
-    width: 15rem;
+  10% {
+    transform: rotate(10deg);
   }
 
-  .list-group-item {
-    cursor: pointer;
+  30% {
+    transform: rotate(0deg);
+  }
+
+  40% {
+    transform: rotate(-10deg);
+  }
+
+  50% {
+    transform: rotate(0deg);
+  }
+
+  60% {
+    transform: rotate(5deg);
+  }
+
+  70% {
+    transform: rotate(0deg);
+  }
+
+  80% {
+    transform: rotate(-5deg);
+  }
+
+  100% {
+    transform: rotate(0deg);
   }
 }
 
-@media (min-width: 768px) {
-  #sidebar-wrapper {
-    margin-left: 0;
+@keyframes sonar {
+  0% {
+    transform: scale(0.9);
+    opacity: 1;
   }
 
-  .show {
-    margin-left: 0 !important;
-  }
-
-  .hide {
-    margin-left: -15rem !important;
+  100% {
+    transform: scale(2);
+    opacity: 0;
   }
 }
 
-@media (max-width: 767px) {
-  .show {
-    margin-left: -15rem !important;
+.sidebar {
+  margin-top: $navbar-margin-top;
+  width: 260px;
+  height: 100%;
+  max-height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 999;
+  transition: left 0.3s ease;
+  background-color: $bg-sidebar-wrapper;
+
+  .sidebar-profile,
+  .sidebar-search,
+  .sidebar-menu {
+    border-top: 1px solid $border-color;
   }
 
-  .hide {
-    margin-left: -0 !important;
+  .sidebar-search,
+  .sidebar-search .input-group-text {
+    border-color: $border-color;
+    box-shadow: none;
+  }
+
+  .sidebar-profile .user-info,
+  .sidebar-search input.search-menu,
+  .sidebar-search .input-group-text,
+  .sidebar-header > a,
+  .sidebar-menu ul li a,
+  .sidebar-menu ul li:hover > a,
+  .sidebar-menu .sidebar-dropdown.active > a,
+  .sidebar-header > a:hover,
+  ul li:hover a i,
+  .sidebar-dropdown .sidebar-submenu li a:hover:before,
+  .sidebar-search input.search-menu:focus + span,
+  .sidebar-menu .sidebar-dropdown.active a i {
+    color: $hover-color;
+  }
+
+  .sidebar-menu ul li a i,
+  .sidebar-menu .sidebar-dropdown div,
+  .sidebar-search input.search-menu,
+  .sidebar-search .input-group-text {
+    background-color: $border-color;
+    border: none;
+    margin-left: 1px;
+  }
+
+  .sidebar-menu .header-menu span {
+    color: $header-menu-color;
+  }
+
+  a {
+    text-decoration: none;
+    transition: color 0.3s ease;
+
+    &:hover {
+      background-color: lighten($dark, 15);
+    }
+  }
+
+  .sidebar-content {
+    margin-top: 10px;
+    max-height: calc(100% - 10px);
+    height: calc(100% - 10px);
+    overflow-y: auto;
+    position: relative;
+
+    .sidebar-header {
+      padding: 10px 20px;
+      display: flex;
+      align-items: center;
+
+      > a {
+        text-transform: uppercase;
+        font-weight: bold;
+        flex-grow: 1;
+        text-decoration: none;
+
+        &:hover {
+          background-color: transparent;
+        }
+      }
+    }
+
+    .sidebar-profile {
+      padding: 20px;
+      overflow: hidden;
+
+      .user-pic {
+        float: left;
+        width: 60px;
+        padding: 2px;
+        border-radius: 12px;
+        margin-right: 15px;
+        overflow: hidden;
+
+        img {
+          object-fit: cover;
+          height: 100%;
+          width: 100%;
+        }
+      }
+
+      .user-info {
+        float: left;
+
+        > span {
+          display: block;
+        }
+      }
+    }
+
+    .sidebar-menu {
+      padding-bottom: 10px;
+
+      .header-menu span {
+        font-weight: bold;
+        font-size: 14px;
+        padding: 15px 20px 5px 20px;
+        display: inline-block;
+      }
+
+      ul {
+        list-style-type: none;
+        padding: 0;
+        margin: 0;
+
+        li a {
+          display: block;
+          width: 100%;
+          text-decoration: none;
+          position: relative;
+          padding: 8px 0;
+          margin-left: 0.5rem;
+
+          i {
+            margin-right: 10px;
+            font-size: 12px;
+            width: 30px;
+            height: 30px;
+            line-height: 30px;
+            text-align: center;
+            border-radius: 4px;
+          }
+
+          &:hover > i::before {
+            display: inline-block;
+            animation: swing ease-in-out 0.5s 1 alternate;
+          }
+
+          span.label,
+          span.badge {
+            float: right;
+            margin-top: 8px;
+            margin-left: 5px;
+          }
+        }
+      }
+
+      .sidebar-dropdown {
+        > a:after {
+          font-family: "Font Awesome 6 Free";
+          font-weight: 900;
+          content: "\f105";
+          display: inline-block;
+          font-style: normal;
+          font-variant: normal;
+          text-rendering: auto;
+          -webkit-font-smoothing: antialiased;
+          -moz-osx-font-smoothing: grayscale;
+          text-align: center;
+          background: 0 0;
+          position: absolute;
+          right: 25px;
+          transition: transform 0.3s ease;
+        }
+
+        .sidebar-submenu {
+          overflow: hidden;
+
+          ul {
+            padding: 0;
+          }
+
+          li {
+            font-size: 13px;
+
+            a {
+              padding: 14px 0 14px 15px;
+
+              &.active {
+                background-color: lighten($dark, 7);
+
+                &:before {
+                  color: $success;
+                }
+              }
+
+              &:before {
+                content: "\f111";
+                font-family: "Font Awesome 6 Free";
+                font-weight: 400;
+                font-style: normal;
+                display: inline-block;
+                text-align: center;
+                text-decoration: none;
+                -webkit-font-smoothing: antialiased;
+                -moz-osx-font-smoothing: grayscale;
+                margin-right: 10px;
+                font-size: 8px;
+              }
+
+              .badge,
+              .label {
+                float: right;
+                margin-top: 0;
+              }
+            }
+          }
+        }
+
+        &.active > a:after {
+          transform: rotate(90deg);
+        }
+      }
+    }
   }
 }
