--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,9 +1,6 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top shadow-sm py-3">
+<nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top shadow">
   <div class="container-fluid">
-    <span
-      (click)="toggleSidebarState()"
-      [ngClass]="{ 'text-muted': sidebarStates.closed === sidebarState$() }"
-      class="fa-solid fa-bars"></span>
+    <span (click)="toggleSidebarState()" [ngClass]="{ 'text-muted': sidebarState$() }" class="fa-solid fa-bars"></span>
 
     <a [routerLink]="[siteUrls.home]" class="navbar-brand cursor-pointer">{{ siteName }}</a>
     <button
@@ -38,7 +35,7 @@
             <li><a class="dropdown-item" href="#">Action</a></li>
             <li><a class="dropdown-item" href="#">Another action</a></li>
             <li>
-              <hr class="dropdown-divider"/>
+              <hr class="dropdown-divider" />
             </li>
             <li><a (click)="logOut()" class="dropdown-item cursor-pointer">Log out</a></li>
           </ul>
