--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -1,6 +1,8 @@
 <aw-view-base>
   <h1>Hello world</h1>
 
+  <h2>State de Sidebar {{ layoutService.sidebarState$() }}</h2>
+
   <button
     (click)="handleToggleNavbar()"
     [ngClass]="{ 'btn-primary': layoutService.navbarState$(), 'btn-outline-primary': !layoutService.navbarState$() }"
@@ -47,7 +49,59 @@
     <button (click)="handleChangeThemeColor()" class="btn btn-primary">Change theme color</button>
   </div>
 
-  <div class="row">
+  <div class="row mt-2">
+    <div class="col">
+      <aw-card>
+        <h5 class="bg-mode">Hello card 1</h5>
+      </aw-card>
+    </div>
+    <div class="col">
+      <aw-card>
+        <h5 class="bg-mode">Hello card 2</h5>
+      </aw-card>
+    </div>
+  </div>
+
+  <div class="row mt-2">
+    <div class="col">
+      <aw-card>
+        <h5 class="bg-mode">Hello card 1</h5>
+      </aw-card>
+    </div>
+    <div class="col">
+      <aw-card>
+        <h5 class="bg-mode">Hello card 2</h5>
+      </aw-card>
+    </div>
+  </div>
+
+  <div class="row mt-2">
+    <div class="col">
+      <aw-card>
+        <h5 class="bg-mode">Hello card 1</h5>
+      </aw-card>
+    </div>
+    <div class="col">
+      <aw-card>
+        <h5 class="bg-mode">Hello card 2</h5>
+      </aw-card>
+    </div>
+  </div>
+
+  <div class="row mt-2">
+    <div class="col">
+      <aw-card>
+        <h5 class="bg-mode">Hello card 1</h5>
+      </aw-card>
+    </div>
+    <div class="col">
+      <aw-card>
+        <h5 class="bg-mode">Hello card 2</h5>
+      </aw-card>
+    </div>
+  </div>
+
+  <div class="row mt-2">
     <div class="col">
       <aw-card>
         <h5 class="bg-mode">Hello card 1</h5>
