Creada directiva awRequiredRole

--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -101,10 +101,10 @@
     </div>
   </div>
 
-  <div class="row mt-2">
+  <div [awRequiredRole]="roles.anonymous" class="row mt-2">
     <div class="col">
       <aw-card>
-        <h5 class="bg-mode">Hello card 1</h5>
+        <h5 class="bg-mode">Hello card 11111</h5>
       </aw-card>
     </div>
     <div class="col">
