--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -41,6 +41,10 @@
     </div>
 
     <div class="mt-3">
+      <h3>Company Id: {{ getCompanyId() }}</h3>
+    </div>
+
+    <div class="mt-3">
       <button (click)="handleLogOut()" class="btn btn-outline-danger">Log out</button>
     </div>
   </ng-container>
