--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -33,15 +33,15 @@
       User name: <span class="text-success">{{ getUserName() }}</span>
     </div>
 
+    <div>
+      Company Id: <span class="text-success">{{ getCompanyId() }}</span>
+    </div>
+
     <div class="mt-3">
       <h3>Roles</h3>
       <ul *ngFor="let role of getRoles()">
         <li>{{ role }}</li>
       </ul>
-    </div>
-
-    <div class="mt-3">
-      <h3>Company Id: {{ getCompanyId() }}</h3>
     </div>
 
     <div class="mt-3">
