Cambiada estructura de SiteUrls

--- a/src/app/views/accounts/register-success/register-success.component.html
+++ b/src/app/views/accounts/register-success/register-success.component.html
@@ -8,7 +8,9 @@
       </div>
 
       <div class="d-flex">
-        <button [routerLink]="siteUrls.login" class="btn btn-outline-success align-self-center mx-auto">Inicio</button>
+        <button [routerLink]="siteUrls.auth.login" class="btn btn-outline-success align-self-center mx-auto">
+          Inicio
+        </button>
       </div>
     </div>
   </div>
