--- a/src/app/views/accounts/register/register.component.html
+++ b/src/app/views/accounts/register/register.component.html
@@ -88,7 +88,7 @@
         </div>
         <!-- end companyName -->
 
-        <a [routerLink]="[siteUrls.login]" class="small">Identificarse</a>
+        <a [routerLink]="[siteUrls.auth.login]" class="small">Identificarse</a>
 
         <aw-btn-loading
           [loading]="loading"
