--- a/src/app/views/accounts/recovery-password-change/recovery-password-change.component.html
+++ b/src/app/views/accounts/recovery-password-change/recovery-password-change.component.html
@@ -39,7 +39,7 @@
         </div>
         <!-- end confirmPassword -->
 
-        <a [routerLink]="[siteUrls.login]" class="small">Identificarse</a>
+        <a [routerLink]="[siteUrls.auth.login]" class="small">Identificarse</a>
 
         <aw-btn-loading
           [loading]="loading"
