--- a/src/app/views/accounts/recovery-password/recovery-password.component.html
+++ b/src/app/views/accounts/recovery-password/recovery-password.component.html
@@ -27,7 +27,7 @@
         </div>
         <!-- end email -->
 
-        <a [routerLink]="[siteUrls.login]" class="small">Identificarse</a>
+        <a [routerLink]="[siteUrls.auth.login]" class="small">Identificarse</a>
 
         <aw-btn-loading
           [loading]="loading"
