--- a/src/app/views/accounts/register-validate/register-validate.component.html
+++ b/src/app/views/accounts/register-validate/register-validate.component.html
@@ -8,7 +8,7 @@
         </div>
 
         <div class="d-flex">
-          <button [routerLink]="siteUrls.login" class="btn btn-outline-success align-self-center mx-auto">
+          <button [routerLink]="siteUrls.auth.login" class="btn btn-outline-success align-self-center mx-auto">
             Identificarse
           </button>
         </div>
@@ -23,7 +23,7 @@
         </div>
 
         <div class="d-flex">
-          <button [routerLink]="siteUrls.register" class="btn btn-outline-success align-self-center mx-auto">
+          <button [routerLink]="siteUrls.accounts.register" class="btn btn-outline-success align-self-center mx-auto">
             Ir a página de registro
           </button>
         </div>
