--- a/src/app/views/auth/login/login.component.html
+++ b/src/app/views/auth/login/login.component.html
@@ -36,8 +36,8 @@
         </aw-form-floating>
         <!-- end password -->
 
-        <a [routerLink]="[siteUrls.register]" class="small">Registro nuevo usuario</a>
-        <a [routerLink]="[siteUrls.recoveryPassword]" class="small p-2">¿Olvidaste contraseña?</a>
+        <a [routerLink]="[siteUrls.accounts.register]" class="small">Registro nuevo usuario</a>
+        <a [routerLink]="[siteUrls.accounts.recoveryPassword]" class="small p-2">¿Olvidaste contraseña?</a>
 
         <aw-btn-loading
           [loading]="loading"
