Fix thead de las tablas ApiResult

--- a/src/app/components/tables/table-header/table-header.component.html
+++ b/src/app/components/tables/table-header/table-header.component.html
@@ -31,7 +31,7 @@
 
         <ng-container *ngIf="header.orderType === orderings.none">
           <span class="ml-auto opacity3">
-            <span class="icon fas fa-arrows-alt-v"></span>
+            &nbsp;<span class="icon fas fa-arrows-alt-v"></span>
           </span>
         </ng-container>
         <!-- end sort order -->
