--- a/src/app/components/buttons/btn-loading/btn-loading.component.html
+++ b/src/app/components/buttons/btn-loading/btn-loading.component.html
@@ -2,6 +2,9 @@
   <ng-container *ngIf="!loading">
     <span>
       <ng-content></ng-content>
+      <ng-container *ngIf="btnIcon">
+        <span [class]="btnIcon"></span>
+      </ng-container>
       {{ btnText }}
     </span>
   </ng-container>
