--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -7,7 +7,8 @@
         </div>
 
         <div class="user-info">
-          <span class="user-name">{{ getUsername() }}</span>
+          <span class="company-name">{{ companyName }}</span>
+          <span class="user-name">{{ username }}</span>
         </div>
       </div>
 
