--- a/src/app/views/employees/employee-details/employee-details.component.html
+++ b/src/app/views/employees/employee-details/employee-details.component.html
@@ -1,3 +1,68 @@
 <aw-view-base>
-  <p>employee-details works!</p>
+  <aw-card>
+    <h3>Detalles empleado {{ employee?.email }}</h3>
+    <hr />
+
+    <table class="table table-striped">
+      <!-- sonarLint -->
+      <caption></caption>
+      <thead>
+        <th></th>
+      </thead>
+      <!-- end sonarLint -->
+
+      <!-- data employee-->
+      <ng-container *ngIf="employee && !loading">
+        <tbody>
+          <tr>
+            <td>Nombre</td>
+            <td>{{ employee.firstName }}</td>
+          </tr>
+          <tr>
+            <td>Apellidos</td>
+            <td>{{ employee.lastName }}</td>
+          </tr>
+          <tr>
+            <td>Email</td>
+            <td>{{ employee.email }}</td>
+          </tr>
+        </tbody>
+      </ng-container>
+      <!-- end data employee-->
+
+      <!-- no data -->
+      <ng-container *ngIf="!employee && !loading">
+        <tbody>
+          <tr>
+            <td colspan="100%" class="text-center">
+              <h6>Error al cargar datos de empleado.</h6>
+            </td>
+          </tr>
+        </tbody>
+      </ng-container>
+      <!-- end no data -->
+
+      <!-- loading spinner -->
+      <ng-container *ngIf="loading">
+        <tbody>
+          <tr>
+            <td colspan="100%" class="text-center">
+              <aw-spinner [loading]="loading" [size]="100"></aw-spinner>
+            </td>
+          </tr>
+        </tbody>
+      </ng-container>
+      <!-- end loading spinner -->
+    </table>
+
+    <button [routerLink]="siteUrls.employees.employeeList" class="btn btn-primary">
+      <span class="fa-solid fa-chevron-left"></span> Volver
+    </button>
+  </aw-card>
+
+  <div class="mt-3">
+    <aw-card>
+      <h3>Varias vistas</h3>
+    </aw-card>
+  </div>
 </aw-view-base>
