--- a/src/app/views/errors/error404/error404.component.html
+++ b/src/app/views/errors/error404/error404.component.html
@@ -12,7 +12,9 @@
       </div>
 
       <div class="col-12 text-center">
-        <button routerLink="/" class="btn btn-primary"><span class="icon fas fa-home"></span> Inicio</button>
+        <button [routerLink]="siteUrls.home" class="btn btn-primary">
+          <span class="icon fas fa-home"></span> Inicio
+        </button>
       </div>
     </div>
   </div>
