--- a/src/app/components/breadcrumb/breadcrumb.component.html
+++ b/src/app/components/breadcrumb/breadcrumb.component.html
@@ -1,17 +1,26 @@
-<nav *ngIf="breadcrumb.hasItems()" class="nav-breadcrumb" aria-label="breadcrumb">
-  <ol class="breadcrumb shadow-sm">
-    <li *ngFor="let bread of breadcrumb.getItems()" [ngClass]="{ active: bread.active }" class="breadcrumb-item small">
-      <a *ngIf="bread.active" [routerLink]="bread.link">
-        <span *ngIf="bread.icon" class="icon is-small">
-          <span [ngClass]="bread.icon" aria-hidden="true"></span>
-        </span>
-        {{ bread.text }}
-      </a>
+<ng-container *ngIf="breadcrumb.hasItems()">
+  <nav class="nav-breadcrumb" aria-label="breadcrumb">
+    <ol class="breadcrumb shadow-sm">
+      <li
+        *ngFor="let bread of breadcrumb.getItems()"
+        [ngClass]="{ active: bread.active }"
+        class="breadcrumb-item small">
+        <ng-container *ngIf="bread.active">
+          <a [routerLink]="bread.link">
+            <span *ngIf="bread.icon" class="icon is-small">
+              <span [ngClass]="bread.icon" aria-hidden="true"></span>
+            </span>
+            {{ bread.text }}
+          </a>
+        </ng-container>
 
-      <span *ngIf="!bread.active" class="text-muted">
-        <span [ngClass]="bread.icon" aria-hidden="true"></span>
-        {{ bread.text }}
-      </span>
-    </li>
-  </ol>
-</nav>
+        <ng-container *ngIf="!bread.active">
+          <span class="text-muted">
+            <span [ngClass]="bread.icon" aria-hidden="true"></span>
+            {{ bread.text }}
+          </span>
+        </ng-container>
+      </li>
+    </ol>
+  </nav>
+</ng-container>
