--- a/src/app/components/tables/table-input-search/table-input-search.component.html
+++ b/src/app/components/tables/table-input-search/table-input-search.component.html
@@ -1,1 +1,13 @@
-<input class="form-control form-control-sm" type="search" />
+<div class="input-group">
+  <input
+    (ngModelChange)="handleInputChange($event)"
+    [(ngModel)]="term"
+    class="form-control border-end-0 border"
+    type="search"
+    id="search-input" />
+  <span class="input-group-append">
+    <button class="btn btn-outline-secondary border-start-0 border-left-0 border ms-n5" type="button">
+      <i class="fa fa-search"></i>
+    </button>
+  </span>
+</div>
